// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RejectionPage:  renders correctly 1`] = `
<Page
  empty={Object {}}
  title="Rejections Report"
>
  <Connect(Filters)
    onShare={[Function]}
    refresh={[Function]}
    shareDisabled={false}
  />
  <MetricsSummary
    rateTitle="Rejected Rate"
    rateValue={14.000000000000002}
  >
    <strong>
      14
    </strong>
     of your messages were rejected of 
    <strong>
      100
    </strong>
     messages targeted
  </MetricsSummary>
  <Panel
    className="RejectionTable"
    title="Rejection Reasons"
  >
    <DataTable
      list={
        Array [
          Object {
            "count_rejected": 65,
            "domain": "gmail.com",
            "reason": "551 - Cannot Relay 105",
            "rejection_category_id": 1,
            "rejection_category_name": "Policy Rejection",
          },
          Object {
            "count_rejected": 62,
            "domain": "gmail.com",
            "reason": "550 - Invalid recipient ...@... (#5.1.1)",
            "rejection_category_id": 1,
            "rejection_category_name": "Policy Rejection",
          },
        ]
      }
      onDomainClick={[Function]}
    />
  </Panel>
  <ShareModal
    handleToggle={[Function]}
    open={false}
    query={Object {}}
  />
</Page>
`;

exports[`RejectionPage:  renders correctly when loading 1`] = `
<Page
  empty={Object {}}
  title="Rejections Report"
>
  <Connect(Filters)
    onShare={[Function]}
    refresh={[Function]}
    shareDisabled={true}
  />
  <MetricsSummary
    rateTitle="Rejected Rate"
    rateValue={14.000000000000002}
  >
    <strong>
      14
    </strong>
     of your messages were rejected of 
    <strong>
      100
    </strong>
     messages targeted
  </MetricsSummary>
  <Panel
    className="RejectionTable"
    title="Rejection Reasons"
  >
    <PanelLoading
      minHeight="400px"
    />
  </Panel>
  <ShareModal
    handleToggle={[Function]}
    open={false}
  />
</Page>
`;

exports[`RejectionPage:  renders loading pannel when aggregates are still loading 1`] = `
<Page
  empty={Object {}}
  title="Rejections Report"
>
  <Connect(Filters)
    onShare={[Function]}
    refresh={[Function]}
    shareDisabled={false}
  />
  <PanelLoading
    minHeight="115px"
  />
  <Panel
    className="RejectionTable"
    title="Rejection Reasons"
  >
    <DataTable
      list={
        Array [
          Object {
            "count_rejected": 65,
            "domain": "gmail.com",
            "reason": "551 - Cannot Relay 105",
            "rejection_category_id": 1,
            "rejection_category_name": "Policy Rejection",
          },
          Object {
            "count_rejected": 62,
            "domain": "gmail.com",
            "reason": "550 - Invalid recipient ...@... (#5.1.1)",
            "rejection_category_id": 1,
            "rejection_category_name": "Policy Rejection",
          },
        ]
      }
      onDomainClick={[Function]}
    />
  </Panel>
  <ShareModal
    handleToggle={[Function]}
    open={false}
  />
</Page>
`;
